1998-04-17  Vadim Zaliva  <lord@crocodile.org>

	* User and domain name now calculated once, not per each request.

1998-04-16  Vadim Zaliva  <lord@crocodile.org>
	
	* Tested with Netscape Proxy
	
	* Tested with Squid-1.1.18 HTTP proxy
	* Tested with HTTP proxy, w/o HTTP proxy, using CDDBP and HTTP.
	* Small bug in parsing corrected.

	* State automata and parsing reimplemented
	* Works over HTTP with and without HTTP proxy.
	* Tested with M>Wall HTTP proxy
	
	* Implemented more sophisticated HTTP encoding for parameters.
	* kscd.cpp reformated.

	* CDDB over HTTP works, w/o proxy now. Proxy support to be implemeted to-morrow.

1998-04-15  Vadim Zaliva  <lord@crocodile.org>

	* cddb.h, cddb.cpp reformated
	* tested to work with and without HTTP proxy
	* tested with squid 1.1.18
	
	* Added one more default server, with HTTP protocol
	* Code for getting servers list via HTTP done and works.
	* Changed 'cddb' object allocation.
	* (this is intermediate commit, HTTP only partialy works)

1998-04-14  Vadim Zaliva  <lord@crocodile.org>

	* GUI added for setting HTTP proxy to access CDDB. 
	* Config options added for HTTP proxy stuff
	* most includes from cddb.h moved to cddb.cpp,kscd.cpp
	* new version #1.1.1

Tue Apr 14 05:17:36 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* layout corrections for kscd magic dialog 

Sat Jan 17 21:36:27 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* Enabled CDDB support. A couple of clean ups and fixes.

Tue Jan 13 03:24:49 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* applied Sebestyen Zoltan <szoli@digo.inf.elte.hu> FreeBSD patch.

Thu Jan  1 19:08:22 1998  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Monster commit: Commit cddb and web integration additions
	  Let the games begin!

Fri Dec 26 13:48:56 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* headerfile changes in plat_bsd.c

Sat Oct 25 11:13:40 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
